# tame-index

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust-ci.yml
benches/: sparse.rs
examples/: tls.rs
src/: cache.rs  error.rs  index.rs  krate.rs  krate_name.rs  lib.rs  utils.rs
src/index/: cache.rs  combo.rs  git.rs  git_remote.rs  index.rs  local.rs  location.rs  sparse.rs  sparse_remote.rs
src/index/local/: builder.rs
src/krate/: dedupe.rs
src/utils/: flock.rs  git.rs
src/utils/flock/: bindings.toml  unix.rs  win_bindings.rs  windows.rs
tests/: cache.rs  flock.rs  git.rs  local.rs  sparse.rs  utils.rs
tests/connect/: Cargo.toml
tests/connect/src/: main.rs
tests/flock/: Cargo.toml
tests/flock/src/: main.rs
