[package]
name = "tame-index"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Provides access to local and remote cargo registry indices"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/tame-index"
homepage = "https://github.com/EmbarkStudios/tame-index"
repository = "https://github.com/EmbarkStudios/tame-index"

[features]
default = []
# Enables the built-in support for fetching and reading a git registry index
git = ["dep:gix"]
# Enables the built-in support for requesting index entries from a HTTP sparse registry index
sparse = ["dep:reqwest"]
# Enables local registry support
local = ["dep:sha2", "dep:bytes"]
# Enables helpers for building a local registry
local-builder = ["local", "dep:reqwest"]

[dependencies]
bytes = { version = "1.4", optional = true }
# All paths are assumed to be utf-8 for ease of use and implementation
camino = "1.1"
# Used to find the location of the local `CARGO_HOME`
home = "0.5"
# Allows calling crates to provide their own HTTP implementation
http = "0.2"
# Nicer scanning through bytes
memchr = "2.5"
# Nicer versions for users
semver = { version = "1.0", features = ["serde"] }
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = { version = "0.10", optional = true, default-features = false, features = [
    "std",
] }
# Smaller fixed size strings with heap fallback
smol_str = { version = "0.2.0", features = ["serde"] }
# Laziness
thiserror = "1.0"
# cargo config parsing
toml = "0.7"
# Faster hashing
twox-hash = { version = "1.6", default-features = false }

[dependencies.gix]
optional = true
version = "0.48"
default-features = false
features = [
    "max-performance-safe",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
]

[dependencies.reqwest]
optional = true
version = "0.11"
default-features = false
features = ["blocking", "gzip", "rustls-tls"]

[dev-dependencies]
cargo_metadata = "0.17"
rayon = "1.7"
tempfile = "3.6"

[package.metadata.docs.rs]
all-features = true

[profile.dev.package.sha2]
opt-level = 3
